stateDiagram-v2
    [*] --> CREATED
    CREATED --> AUTHORIZING: REQUEST_AUTH
    AUTHORIZING --> AUTHORIZED: AUTH_APPROVED
    AUTHORIZING --> DECLINED: AUTH_DECLINED
    AUTHORIZING --> FAILED: NETWORK_TIMEOUT
    AUTHORIZED --> CAPTURE_PENDING: CAPTURE_REQUESTED
    AUTHORIZED --> VOID_PENDING: VOID_REQUESTED
    CAPTURE_PENDING --> CAPTURED: CAPTURE_SUCCEEDED
    CAPTURE_PENDING --> FAILED: CAPTURE_FAILED
    CAPTURE_PENDING --> FAILED: NETWORK_TIMEOUT
    CAPTURED --> RECONCILIATION_PENDING: SETTLEMENT_RECEIVED
    RECONCILIATION_PENDING --> CAPTURED: SETTLEMENT_RECEIVED (MATCH)
    RECONCILIATION_PENDING --> RECONCILIATION_MISMATCH: RECONCILIATION_FAILED
    CAPTURED --> REFUND_PENDING: REFUND_REQUESTED
    PARTIALLY_REFUNDED --> REFUND_PENDING: REFUND_REQUESTED
    REFUND_PENDING --> PARTIALLY_REFUNDED: REFUND_SUCCEEDED (< full)
    REFUND_PENDING --> REFUNDED: REFUND_SUCCEEDED (= full)
    CAPTURED --> DISPUTED: DISPUTE_OPENED
    OFFLINE_QUEUED --> OFFLINE_SYNCING: RETRY_REQUESTED
    OFFLINE_SYNCING --> CAPTURED: OFFLINE_SYNC_SUCCEEDED
    OFFLINE_SYNCING --> OFFLINE_REJECTED: OFFLINE_SYNC_FAILED
    FAILED --> AUTHORIZING: RETRY_REQUESTED
    DECLINED --> AUTHORIZING: RETRY_REQUESTED
